--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,111 @@
   box-sizing: border-box;
 }
 
+html {
+  height: -webkit-fill-available;
+}
+
 body {
-  font-family: "Roboto", sans-serif;
-  color: #e1e1e1;
   height: 100vh;
   width: 100vw;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+  display: flex;
+  flex-direction: column;
+  font-family: "Roboto", sans-serif;
+  color: #e1e1e1;
   background-color: rgb(34, 36, 38);
+}
+
+header {
+  flex: 0 1 auto;
+  padding: 0.5em;
+  padding-left: 1.5em;
+  font-size: 1rem;
+  color: rgb(208, 83, 152);
+  text-shadow: 0 0 0.4em rgb(208, 83, 152);
+}
+
+main {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 7vh;
+}
+main .info {
+  font-size: 7vh;
+}
+main .boardWrapper {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  gap: 4px;
+  border: 4px rgb(208, 83, 152) solid;
+  background-color: rgb(208, 83, 152);
+  border-radius: 5px;
+}
+main .boardWrapper .tile {
+  width: 15vh;
+  height: 15vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(48, 48, 48);
+  border-radius: 5px;
+  font-size: 15vh;
+  font-weight: 400;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+main button {
+  font-family: "Roboto", sans-serif;
+  font-size: 4vh;
+  color: rgb(208, 83, 152);
+  background-color: rgb(48, 48, 48);
+  outline: none;
+  border: 2px rgb(208, 83, 152) solid;
+  border-radius: 5px;
+  padding: 0.5em;
+  cursor: pointer;
+}
+main button:hover,
+main .tile:hover {
+  filter: brightness(1.2);
+}
+
+footer {
+  flex: 0 1 auto;
+  text-align: center;
+  padding: 0.8rem;
+  font-size: 0.8rem;
+}
+footer a {
+  text-decoration: none;
+  color: rgb(208, 83, 152);
+}
+
+@media screen and (max-width: 450px) {
+  header {
+    font-size: 3vw;
+  }
+
+  main {
+    gap: 8vw;
+  }
+  main .info {
+    font-size: 10vw;
+  }
+  main .boardWrapper .tile {
+    width: 27vw;
+    height: 27vw;
+    font-size: 27vw;
+  }
+  main button {
+    font-size: 7vw;
+  }
 }/*# sourceMappingURL=style.css.map */
